# TicTacToe

./: .env  Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs  middleware.rs  ws.rs
backend/src/routes/: mod.rs  rooms.rs  user.rs
db/: .env  Cargo.toml
db/.sqlx/: query-124d880a83edd0e900f09bd91c14b259efa7203880aaf7c52ff774f8d747f0f5.json  query-1ea4a3f1d8f72d6aa47e63a6b10518dd2961b8f6e72189105959ad8cd065702f.json
db/migrations/: 20240101000001_create_rooms_table.sql
db/src/: lib.rs
db/src/models/: room.rs
